--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,32 @@
     <name>apireferencia</name>
 
     <build>
-        <finalName>referencia-api-02</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
+    	<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+						<warName>referencia-api-02</warName>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+    	
+<!--         <finalName>referencia-api-02</finalName> -->
+<!--         <plugins> -->
+<!--             <plugin> -->
+<!--                 <groupId>org.apache.maven.plugins</groupId> -->
+<!--                 <artifactId>maven-compiler-plugin</artifactId> -->
+<!--                 <version>2.5.1</version> -->
+<!--                 <inherited>true</inherited> -->
+<!--                 <configuration> -->
+<!--                     <source>1.7</source> -->
+<!--                     <target>1.7</target> -->
+<!--                 </configuration> -->
+<!--             </plugin> -->
+<!--         </plugins> -->
     </build>
 
     <dependencyManagement>
